# papercut

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  ascii.py  compose.yaml  config.py  cspell.config.yaml  main.py  models.py  papercut-schema.json  papercut.toml  pyproject.toml
src/papercut/: __init__.py  api.py  logging_config.py
src/papercut/core/: __init__.py  console.py  markdown.py  models.py  printer.py  utils.py
src/papercut/outputs/: __init__.py  console.py
