[project]
name = "papercut"
version = "0.1.0"
description = "Print your tickets on a real receipt printer"
readme = "README.md"
authors = [{ name = "KaBanks", email = "hi@krabby.dev" }]
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.120.4",
  "uvicorn[standard]>=0.38.0",
  "python-escpos[usb]>=3.1",
]

[dependency-groups]
dev = ["ruff>=0.14.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/papercut"]
